# uss-nav

./: .dockerignore  .gitignore  ADR.md  AGENTS.md  CODEBASE.md  Dockerfile  Doxyfile  EGO.md  NEXT_SCENEGRAPH.md  PLACES.md  SCENEGRAPH.md  SG-UNIFIED.md  VIEW.md  manifest.yaml  package.json  test-scenarios.yaml  tsconfig.json  vite.config.ts
Elastic-Tracker/: README.md
docker/: Dockerfile.test  entrypoint-test.sh  entrypoint.sh
docker/bridge/: ego_mqtt_bridge.py
docs/adr/: ADR-0005-test-data-pipeline.md  ADR-0006-post-processing-viz.md  ADR-0007-realsense-d455.md
frontend/: index.html  tsconfig.json
frontend/src/: App.tsx
src/cli/: dashboard.ts  docker-build.ts  index.ts  scenarios.ts  test-assert.ts  test-report.ts  test-run.ts  test-scale.ts  test-smoke.ts  test-status.ts  test-stop.ts  test-validate.ts  yaml.ts
src/core/: config.ts  mqtt.ts  workspace.ts
src/server/: index.ts
src/types/: ego-test.ts
tools/: infra.ts
tools/doxygen/: render.ts
tools/map-demo/: package.json  render.ts
ws_main/src/planner/sim_bringup/: CMakeLists.txt  package.xml
ws_main/src/planner/sim_bringup/launch/: rec_learn_ego_standalone.launch  sim_ego_main.launch  sim_ego_map.launch  sim_ego_planner.launch  sim_ego_sim.launch
ws_main/src/planner/sim_bringup/params/: rec_learn_realsense_d455.yaml  sim_ego_camera.yaml  sim_ego_control.yaml  sim_ego_map.yaml  sim_ego_planner.yaml
ws_main/src/planner/sim_bringup/rviz/: sim_ego.rviz
yoloe/: export_yoloe_tensorrt_only.py  predict_realtime_cam_real.py  predict_realtime_cam_sim.py  predict_realtime_cam_sim2.py
(+119 files in other folders)
